--- a/src/sass/components/_profile.scss
+++ b/src/sass/components/_profile.scss
@@ -118,5 +118,8 @@
   }
   &-content {
     margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
