--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -24,6 +24,16 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+a:link,
+a:visited {
+  color: $blue;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
 ::-moz-selection {
   background-color: #444;
   color: $green;
