--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -3,8 +3,8 @@
   justify-content: space-evenly;
   font-size: 2.6rem;
   color: #eee;
-  margin-top: 10%;
-  margin-left: 10%;
+  margin-top: 8%;
+  margin-left: 12%;
 
   &-nav {
     position: fixed;
@@ -19,6 +19,7 @@
       margin: 10rem 0 0 15rem;
 
       &_default {
+        display: flex;
         &,
         &:link,
         &:visited {
@@ -31,6 +32,7 @@
       }
 
       &_selected {
+        display: flex;
         &,
         &:link,
         &:visited {
@@ -42,8 +44,31 @@
         }
       }
 
+      &-icon {
+        margin-left: 1rem;
+      }
+
+      &-notifications {
+        display: flex;
+        position: relative;
+        &_number {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          margin-left: 2.7rem;
+          font-size: 1.6rem;
+          font-weight: 700;
+          border-radius: 50%;
+          height: 20px;
+          width: 20px;
+          color: $black;
+          background-color: $green;
+        }
+      }
+
       & > * {
-        transition: all 0.3s ease-out;
+        transition: all 0.2s ease-out;
       }
 
       & > *:hover {
@@ -83,7 +108,7 @@
         min-width: 900px;
         max-width: 900px;
         margin: 0rem .5rem 3rem;
-        transition: all 0.3s ease-out;
+        transition: all 0.2s ease-out;
 
         &-avatar {
           margin-right: 3rem;
@@ -217,7 +242,7 @@
                 color: #fff;
                 resize: none;
                 font-size: 2rem;
-                transition: all 0.3s ease-out;
+                transition: all 0.2s ease-out;
                 &:required {
                   box-shadow: none;
                 }
@@ -238,7 +263,7 @@
                 background-color: #eee;
                 margin: 0 0 0 3rem;
                 font-size: 2rem;
-                transition: all 0.3s ease-out;
+                transition: all 0.2s ease-out;
 
                 &:hover {
                   background-color: $green;
@@ -268,7 +293,7 @@
                 color: #fff;
                 resize: none;
                 font-size: 2rem;
-                transition: all 0.3s ease-out;
+                transition: all 0.2s ease-out;
                 &:required {
                   box-shadow: none;
                 }
@@ -289,7 +314,7 @@
                 background-color: #eee;
                 margin: 0 1rem;
                 font-size: 2rem;
-                transition: all 0.3s ease-out;
+                transition: all 0.2s ease-out;
 
                 &:hover {
                   background-color: $green;
@@ -329,7 +354,7 @@
         padding: 0.5rem 0.75rem;
         font-size: 2rem;
         width: 80%;
-        transition: all 0.3s ease-out;
+        transition: all 0.2s ease-out;
 
         &:hover {
           background-color: #efefef;
@@ -411,7 +436,7 @@
           }
 
           &_follow {
-            transition: all 0.3s ease-out;
+            transition: all 0.2s ease-out;
             &:hover {
               background-color: $blue;
               color: #eee;
@@ -421,7 +446,7 @@
           &_following {
             background-color: $blue;
             color: #eee;
-            transition: all 0.3s ease-out;
+            transition: all 0.2s ease-out;
             &:hover {
               background-color: $green;
               color: #eee;
