--- a/src/sass/components/_messages.scss
+++ b/src/sass/components/_messages.scss
@@ -1,6 +1,9 @@
 .messages {
+    display: flex;
+    justify-content: center;
+    width: 100%;
     &-people {
-        width: 25%;
+        width: 35%;
         background-color: red;
     }
     &-list {
