--- a/src/sass/components/_profile.scss
+++ b/src/sass/components/_profile.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 3rem;
+  margin-top: -3rem;
 
   &-top {
     display: flex;
@@ -20,13 +21,11 @@
         border-radius: 50%;
         overflow: hidden;
 
-        
-
         &_image {
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-            z-index: -20;
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
+          z-index: -20;
         }
 
         &_change {
@@ -114,10 +113,23 @@
       &-joined {
         padding-left: 3rem;
       }
+
+      &-follows {
+        display: flex;
+        font-size: 2rem;
+        margin-top: 5rem;
+
+        &_following {
+        }
+
+        &_followers {
+          margin-left: 3rem;
+        }
+      }
     }
   }
   &-content {
-    margin-top: 10rem;
+    margin-top: 6rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
