--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -4,4 +4,5 @@ $light-gray: #D7CDCC;
 $white: #F7FFF7;
 $black: #14110F;
 $red: #B80C09;
-$blue: rgb(25, 118, 224);
+$blue: #1976e0;
+$lightblue: #1da1f2;
