--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -26,13 +26,17 @@ nav ul {
   align-items: center;
   width: 15%;
 
+  &:hover {
+    cursor: default;
+  }
+
   &-img {
     font-size: 8rem;
     color: $black;
     background-color: $green;
     border-radius: 100%;
-    height: 5rem;
-    width: 5rem !important;
+    height: 6rem;
+    width: 6rem !important;
     padding: 1rem;
   }
 }
