--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,9 +6,10 @@
 @import "./components/main";
 @import "./components/landing";
 @import "./components/home";
-@import "./components/messages";
 @import "./components/form";
 @import "./components/profile";
+@import "./components/messages";
+@import "./components/notifications";
 @import "./components/day";
 @import "./components/footer";
 
